syntax = "proto3";

option go_package = "jekabot/proto";

service YoutubeService {
	rpc GetRandomVideo(GetRandomVideoRequest) returns(GetRandomVideoResponse);
};

message GetRandomVideoRequest {};

message GetRandomVideoResponse {
	string url = 1;
};
